# ros2_-cmd_vel_splitter

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: cmd_vel_splitter.yaml
launch/: cmd_vel_splitter.launch.py
resource/: ros2_cmd_vel_splitter
ros2_cmd_vel_splitter/: cmd_vel_splitter_node.py
