<?xml version="1.0"?>
<package format="3">
  <name>ros2_cmd_vel_splitter</name>
  <version>0.1.0</version>
  <description>Fan-out node that republishes cmd_vel messages to multiple destinations with runtime-configurable topics.</description>
  <maintainer email="michael.valand@gmail.com">Ubiquity Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
